; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_index-pack.c_free_base_data.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_index-pack.c_free_base_data.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.base_data = type { i64, i64 }
%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.base_data*)* @free_base_data to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @free_base_data(%struct.base_data* %0) #0 {
  %2 = alloca %struct.base_data*, align 8
  store %struct.base_data* %0, %struct.base_data** %2, align 8
  %3 = load %struct.base_data*, %struct.base_data** %2, align 8
  %4 = getelementptr inbounds %struct.base_data, %struct.base_data* %3, i32 0, i32 1
  %5 = load i64, i64* %4, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %21

7:                                                ; preds = %1
  %8 = load %struct.base_data*, %struct.base_data** %2, align 8
  %9 = getelementptr inbounds %struct.base_data, %struct.base_data* %8, i32 0, i32 1
  %10 = load i64, i64* %9, align 8
  %11 = call i32 @FREE_AND_NULL(i64 %10)
  %12 = load %struct.base_data*, %struct.base_data** %2, align 8
  %13 = getelementptr inbounds %struct.base_data, %struct.base_data* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = call %struct.TYPE_2__* (...) @get_thread_data()
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = sext i32 %17 to i64
  %19 = sub nsw i64 %18, %14
  %20 = trunc i64 %19 to i32
  store i32 %20, i32* %16, align 4
  br label %21

21:                                               ; preds = %7, %1
  ret void
}

declare dso_local i32 @FREE_AND_NULL(i64) #1

declare dso_local %struct.TYPE_2__* @get_thread_data(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
